// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner only accepts preset colors 1`] = `
.c1 {
  text-align: flex-start;
}

.c2 {
  width: 100%;
  text-align: left;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 14px;
}

.c3 {
  font-size: 16px;
  margin: 0px;
}

<div
  className=""
  color={undefined}
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
      width={1}
    >
      <h5
        className="c3"
        fontSize={2}
      />
      <span
        className="c4"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with blue bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #007aff;
  color: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
      	h2V9z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with custom iconName and size 1`] = `
.c0 {
  background-color: #0a0;
  color: #fff;
}

.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with green bg 1`] = `
.c0 {
  background-color: #0a0;
  color: #fff;
}

.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10,17l-5-5l1.4-1.4l3.6,3.6
      	l7.6-7.6L19,8L10,17z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightBlue bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #cdf;
  color: #001833;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="text"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
      	h2V9z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightGreen bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #cec;
  color: #001833;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="text"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10,17l-5-5l1.4-1.4l3.6,3.6
      	l7.6-7.6L19,8L10,17z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightOrange bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #fec;
  color: #001833;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="text"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightRed bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #fcc;
  color: #001833;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="text"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
      	h2V17z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with no props other than theme 1`] = `
.c0 {
  background-color: #0a0;
  color: #fff;
}

.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10,17l-5-5l1.4-1.4l3.6,3.6
      	l7.6-7.6L19,8L10,17z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with orange bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #f90;
  color: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;

exports[`Banner renders with red bg 1`] = `
.c2 {
  text-align: flex-start;
}

.c4 {
  width: 100%;
  text-align: left;
}

.c0 {
  background-color: #c00;
  color: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c6 {
  font-size: 14px;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 32px;
  margin-top: -2px;
}

.c5 {
  font-size: 16px;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1 c2"
  >
    <svg
      className="c3"
      fill="currentcolor"
      height={24}
      innerRef={undefined}
      mr={3}
      mt="-2px"
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
      	h2V17z"
      />
    </svg>
    <div
      className="c4"
      width={1}
    >
      <h5
        className="c5"
        fontSize={2}
      />
      <span
        className="c6"
        fontSize={1}
      />
    </div>
  </div>
</div>
`;
